--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Maurice Künicke</h1>
         <h2>Physicist / Data Scientist / Software Developer</h2>
+        <h2>(!!Update in progress!!)</h2>
         <div id="menu">
             <a onclick="showabout()">about</a>
             <a onclick="showwork()">work</a>
