--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Maurice Künicke</h1>
-        <h2>Physicist / Data Scientist / Software Developer</h2>
-        <h2>(!!Update in progress!!)</h2>
+        <h2>Soon to be Physicist / Data Scientist / Software Developer</h2>
+        <h2>(!!Site under construction!!)</h2>
         <div id="menu">
             <a onclick="showabout()">about</a>
             <a onclick="showwork()">work</a>
