--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             </h1>
             <h2>Welcome To My Website<br>(Under Construction)</h2>
         </div>
+        <button class="btn" id="btn1">My Projects</button>
+        <button class="btn" id="btn2">About me</button>
+        <button class="btn" id="btn3">Blog</button>
 
 
         <div class="sidebar">
