--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
                 </h1>
                 <h2>Welcome To My Website<br>(Under Construction)</h2>
             </div>
-            <a href="#AboutMe" class="btn" id="btn1">About Me</a>
-            <a href="#MyProjects" class="btn" id="btn2">My Projects</a>
-            <a href="#MyBlog" class="btn" id="btn3">Blog</a>
+            <div class="row">
+                <a href="#AboutMe" class="btn" id="btn1">About Me</a>
+                <a href="#MyProjects" class="btn" id="btn2">My Projects</a>
+                <a href="#MyBlog" class="btn" id="btn3">Blog</a>
+            </div>
 
             <div class="sidebar">
                 <div class="social-links">
@@ -78,10 +80,27 @@
         </section>
 
         <section class="section s3">
-            <h1> Projects Overview</h1>
+            <h1>My Projects</h1>
 
+            <div class="project_row">
+                <div id="column1">
+                    <img src="images/java.png" draggable="false">
+                    <img src="images/heic1501a.jpg" draggable="false">
+                </div>
+                <div id="column2">
+                    <img src="images/java.png" draggable="false">
+                    <img src="images/java.png" draggable="false">
 
-
+                </div>
+                <div id="column3">
+                    <img src="images/java.png" draggable="false">
+                    <img src="images/java.png" draggable="false">
+                </div>
+                <div id="column4">
+                    <img src="images/java.png" draggable="false">
+                    <img src="images/java.png" draggable="false">
+                </div>
+            </div>
 
             <div class="sidebar">
                 <div class="social-links">
