Move assets, add about me text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mkuenicke</title>
-    <link rel="stylesheet" href="./fullpage.min.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/fullpage.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Sansita+Swashed:wght@500&display=swap"
         rel="stylesheet" />
@@ -21,8 +21,8 @@
                 crossorigin="anonymous"></script>
             </script>
             <div class="vanta">
-                <script src="three.r119.min.js"></script>
-                <script src="vanta.rings.min.js"></script>
+                <script src="./assets/js/three.r119.min.js"></script>
+                <script src="./assets/js/vanta.rings.min.js"></script>
             </div>
             <script>
                 VANTA.RINGS({
@@ -43,7 +43,9 @@
                     <span class="txt-type" data-wait="500"
                         data-words='["Physicist", "Data Scientist", "Software Developer"]'></span>
                 </h1>
-                <h2>Welcome To My Website<br>(Under Construction)</h2>
+                <h2>Welcome To My Website<br>(Under Construction<br>
+                    Please don't look at the mobile version of this
+                    site..)</h2>
             </div>
             <div class="row">
                 <a href="#AboutMe" class="btn" id="btn1">About Me</a>
@@ -54,53 +56,59 @@
             <div class="sidebar">
                 <div class="social-links">
                     <a href="https://github.com/MauriceKuenicke" target="_blank">
-                        <img src="images/GitHub-Mark-Light-32px.png"></a>
+                        <img src="assets/images/GitHub-Mark-Light-32px.png"></a>
                     <a href="https://www.linkedin.com/in/maurice-k%C3%BCnicke-429a211a3/" target="_blank">
-                        <img src="images/linkedin.png"></a>
+                        <img src="assets/images/linkedin.png"></a>
                 </div>
                 <div class="useful-links">
-                    <img src="images/info.png">
-                    <img src="images/share.png">
+                    <img src="assets/images/info.png">
+                    <img src="assets/images/share.png">
                 </div>
         </section>
 
         <section class="section s2">
             <h1> About Me</h1>
             <div class="about_text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rerum fugit sit animi beatae
-                    repudiandae sint modi voluptatum non neque distinctio, vitae aliquam natus blanditiis sunt
-                    accusantium officia itaque debitis.
+                <p>Hi, my name is Maurice and I'm a data enthusiast living in Berlin. I'm very much a numbers guy and
+                    someone who loves to make new discoveries in a thing that we all know but only a few love - Data. I
+                    created this site primarily for myself
+                    to store all kinds of topics that interest me in a single space. Here I can write about them and use
+                    it as a way to deepen my knowledge.
+                    And who knows...maybe someone else will learning something from it too. :) <br> But now some
+                    information about myself.
+                    I do hold a Physics degree from
+                    the Technical University of Berlin.
+                    One half of my time is spent on my master studies where I mainly focus on theoretical physics and
+                    numerical simulations and its applications in Astro- and Plasmaphysics or Medicine. Things like
+                    Kelvin-Helmholtz and Rayleigh-Taylor instabilities or the biofluidmechanics of our circulatory
+                    system and artificial organs.
+                    My bachelor's thesis was written on the calculations of stellar trajectories using numerical
+                    integration methods. A small abstract can be found on the website for
+                    the <a target="_blank" rel="noopener noreferrer"
+                        href="https://ag2020.astronomische-gesellschaft.de/view_abstract.php?id=83">virtual annual
+                        meeting of the German Astronomical Society.</a>
+                    Currently the other half of my professional time is spent on my work for Siemens as a Data Analyst,
+                    Software
+                    Developer and
+                    Technical Projectmanager where we develop a cloud-implemented automated data pipeline to extract and
+                    analyse gigabytes of uploaded data. Before joining Siemens, I was mainly working on topics like NLP
+                    and Genetic Algorithms for companies like <a target="_blank" rel="noopener noreferrer"
+                        href="https://www.spiegel.de/wirtschaft/unternehmen/motionlogic-deutsche-telekom-stellt-firma-hinter-corona-handydaten-ein-a-90fbe9a3-08cb-4011-a995-96f6449bc4bd">Motionlogic</a>
+                    or <a target="_blank" rel="noopener noreferrer" href="https://mia.rhenus.com/">MIA MEDICAL
+                        INFORMATION ANALYTICS.</a>
                 </p>
             </div>
-            <div class="picture_of_me"><img src="images/heic1501a.jpg" width="600"></div>
+            <div class="picture_of_me"><img src="assets/images/Bild2.jpg" width="500"></div>
             <div class="sidebar">
                 <div class="social-links">
                     <a href="https://github.com/MauriceKuenicke" target="_blank">
-                        <img src="images/GitHub-Mark-Light-32px.png"></a>
+                        <img src="assets/images/GitHub-Mark-Light-32px.png"></a>
                     <a href="https://www.linkedin.com/in/maurice-k%C3%BCnicke-429a211a3/" target="_blank">
-                        <img src="images/linkedin.png"></a>
+                        <img src="assets/images/linkedin.png"></a>
                 </div>
                 <div class="useful-links">
-                    <img src="images/info.png">
-                    <img src="images/share.png">
+                    <img src="assets/images/info.png">
+                    <img src="assets/images/share.png">
                 </div>
         </section>
 
@@ -110,28 +118,28 @@
 
                 <div class="project_row">
                     <div id="column1">
-                        <a href="#" onclick="toggle(this)" data-id="popup_11"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_11"><img src="assets/images/java.png"
                                 draggable="false"></a>
-                        <a href="#" onclick="toggle(this)" data-id="popup_12"><img src="images/heic1501a.jpg"
+                        <a href="#" onclick="toggle(this)" data-id="popup_12"><img src="assets/images/heic1501a.jpg"
                                 draggable="false"></a>
                     </div>
                     <div id="column2">
-                        <a href="#" onclick="toggle(this)" data-id="popup_21"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_21"><img src="assets/images/java.png"
                                 draggable="false"></a>
-                        <a href="#" onclick="toggle(this)" data-id="popup_22"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_22"><img src="assets/images/java.png"
                                 draggable="false"></a>
 
                     </div>
                     <div id="column3">
-                        <a href="#" onclick="toggle(this)" data-id="popup_31"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_31"><img src="assets/images/java.png"
                                 draggable="false"></a>
-                        <a href="#" onclick="toggle(this)" data-id="popup_32"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_32"><img src="assets/images/java.png"
                                 draggable="false"></a>
                     </div>
                     <div id="column4">
-                        <a href="#" onclick="toggle(this)" data-id="popup_41"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_41"><img src="assets/images/java.png"
                                 draggable="false"></a>
-                        <a href="#" onclick="toggle(this)" data-id="popup_42"><img src="images/java.png"
+                        <a href="#" onclick="toggle(this)" data-id="popup_42"><img src="assets/images/java.png"
                                 draggable="false"></a>
                     </div>
                 </div>
@@ -139,13 +147,13 @@
             <div class="sidebar">
                 <div class="social-links">
                     <a href="https://github.com/MauriceKuenicke" target="_blank">
-                        <img src="images/GitHub-Mark-Light-32px.png"></a>
+                        <img src="assets/images/GitHub-Mark-Light-32px.png"></a>
                     <a href="https://www.linkedin.com/in/maurice-k%C3%BCnicke-429a211a3/" target="_blank">
-                        <img src="images/linkedin.png"></a>
+                        <img src="assets/images/linkedin.png"></a>
                 </div>
                 <div class="useful-links">
-                    <img src="images/info.png">
-                    <img src="images/share.png">
+                    <img src="assets/images/info.png">
+                    <img src="assets/images/share.png">
                 </div>
             </div>
 
@@ -161,21 +169,23 @@
 
         <section class="section s4">
             <h1>My Blog</h1>
+
+
             <div class="sidebar">
                 <div class="social-links">
                     <a href="https://github.com/MauriceKuenicke" target="_blank">
-                        <img src="images/GitHub-Mark-Light-32px.png"></a>
+                        <img src="assets/images/GitHub-Mark-Light-32px.png"></a>
                     <a href="https://www.linkedin.com/in/maurice-k%C3%BCnicke-429a211a3/" target="_blank">
-                        <img src="images/linkedin.png"></a>
+                        <img src="assets/images/linkedin.png"></a>
                 </div>
                 <div class="useful-links">
-                    <img src="images/info.png">
-                    <img src="images/share.png">
+                    <img src="assets/images/info.png">
+                    <img src="assets/images/share.png">
                 </div>
         </section>
     </div>
-    <script src="./fullpage.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="./assets/js/fullpage.min.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 
